// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Textarea[Base] should render correctly  1`] = `
<div
  class="cpar6zg soui-textarea-wrapper c-7lc4pw soui-textarea-wrapper-focus"
  data-soui-input-border="true"
>
  <textarea
    class="c-nmp22y soui-textarea-wrapper-padding-box c-6covvb soui-textarea-wrapper-inner-title-bottom ckpkonl soui-textarea-textarea"
    placeholder="input something"
    rows="4"
  />
</div>
`;

exports[`Textarea[Base] should render correctly about autosize 1`] = `
<div
  class="cpar6zg soui-textarea-wrapper"
  data-soui-input-border="true"
>
  <textarea
    class="c-nmp22y soui-textarea-wrapper-padding-box c-6covvb soui-textarea-wrapper-inner-title-bottom ckpkonl soui-textarea-textarea"
    placeholder="Please enter content, the height can be automatically adjusted"
    rows="2"
    style="overflow: auto; max-height: 150px; height: 0px;"
  />
  <textarea
    class="c-nmp22y soui-textarea-wrapper-padding-box c-6covvb soui-textarea-wrapper-inner-title-bottom ckpkonl soui-textarea-textarea ch3ldh3 soui-textarea-shadow"
    placeholder="Please enter content, the height can be automatically adjusted"
    rows="2"
  />
</div>
`;

exports[`Textarea[Base] should render correctly about footer 1`] = `
<div
  class="cpar6zg soui-textarea-wrapper"
  data-soui-input-border="true"
>
  <textarea
    class="c-nmp22y soui-textarea-wrapper-padding-box c-6covvb soui-textarea-wrapper-inner-title-bottom ckpkonl soui-textarea-textarea"
    placeholder="input something"
    rows="3"
  />
  <div
    class="c-nmp22y soui-textarea-wrapper-padding-box cb243xu soui-textarea-footer"
  >
    <div
      style="text-align: right;"
    >
      <span>
        0
      </span>
       / 20
    </div>
  </div>
</div>
`;

exports[`Textarea[Base] should render correctly about info 1`] = `
<div
  class="cpar6zg soui-textarea-wrapper"
  data-soui-input-border="true"
>
  <textarea
    class="c-nmp22y soui-textarea-wrapper-padding-box c-6covvb soui-textarea-wrapper-inner-title-bottom ckpkonl soui-textarea-textarea"
    placeholder="input something"
    rows="4"
  />
</div>
`;

exports[`Textarea[Base] should render correctly about info by function 1`] = `
<div
  class="cpar6zg soui-textarea-wrapper"
  data-soui-input-border="true"
>
  <textarea
    class="c-nmp22y soui-textarea-wrapper-padding-box c-6covvb soui-textarea-wrapper-inner-title-bottom ckpkonl soui-textarea-textarea"
    placeholder="input something"
    rows="4"
  />
</div>
`;

exports[`Textarea[Base] should render correctly about size 1`] = `
<div>
  <div
    class="cpar6zg soui-textarea-wrapper c-7e84ol soui-textarea-wrapper-small"
    data-soui-input-border="true"
    style="width: 120px; margin-inline-end: 24px;"
  >
    <textarea
      class="c-nmp22y soui-textarea-wrapper-padding-box c-6covvb soui-textarea-wrapper-inner-title-bottom ckpkonl soui-textarea-textarea"
      placeholder="small size"
      rows="3"
    />
  </div>
  <div
    class="cpar6zg soui-textarea-wrapper"
    data-soui-input-border="true"
    style="width: 120px; margin-inline-end: 24px;"
  >
    <textarea
      class="c-nmp22y soui-textarea-wrapper-padding-box c-6covvb soui-textarea-wrapper-inner-title-bottom ckpkonl soui-textarea-textarea"
      placeholder="default size"
      rows="3"
    />
  </div>
  <div
    class="cpar6zg soui-textarea-wrapper c-7ia075 soui-textarea-wrapper-large"
    data-soui-input-border="true"
    style="width: 120px; margin-inline-end: 24px;"
  >
    <textarea
      class="c-nmp22y soui-textarea-wrapper-padding-box c-6covvb soui-textarea-wrapper-inner-title-bottom ckpkonl soui-textarea-textarea"
      placeholder="large size"
      rows="3"
    />
  </div>
</div>
`;
